<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.corese4rch</groupId>
    <artifactId>cvurl-io</artifactId>
    <version>1.5</version>

    <name>cVurl</name>
    <description>
        cVurl is an open-source java wrapper for an HTTP/2 Client. Written in Java11 and can be used with any
        jdk11.0.2 and higher
    </description>
    <url>https://github.com/corese4rch/cvurl</url>

    <organization>
        <name>corese4rch</name>
        <url>https://github.com/corese4rch</url>
    </organization>

    <properties>
        <!-- project specific -->
        <jdk.version>11</jdk.version>
        <maven.compiler.release>${jdk.version}</maven.compiler.release>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- main -->
        <slf4j-api.version>2.0.0-alpha1</slf4j-api.version>
        <jackson.core.version>2.11.0</jackson.core.version>
        <!-- test -->
        <mockito.version>3.9.0</mockito.version>
        <wiremock.version>2.23.2</wiremock.version>
        <hamcrest.version>2.1</hamcrest.version>
        <junit-jupiter.version>5.6.0</junit-jupiter.version>
        <mockito-extension.version>1.2.1</mockito-extension.version>
        <!-- plugins -->
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
        <jacoco-plugin.version>0.8.5</jacoco-plugin.version>
        <sonar-plugin.version>3.6.0.1398</sonar-plugin.version>
        <source-plugin.version>3.2.0</source-plugin.version>
        <release-plugin.version>2.5.3</release-plugin.version>
        <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <coveralls-plugin.version>4.3.0</coveralls-plugin.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <javadoc-plugin.version>3.2.0</javadoc-plugin.version>
        <nexus-staging-plugin.version>1.6.8</nexus-staging-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.core.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>name.falgout.jeffrey.testing.junit5</groupId>
            <artifactId>mockito-extension</artifactId>
            <version>${mockito-extension.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock</artifactId>
            <version>${wiremock.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>cvurl-io-${project.version}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>

            <!-- compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <!-- sonar plugin -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar-plugin.version}</version>
            </plugin>

            <!-- surefire plugin -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>${argLine} --add-opens
                        coresearch.cvurl.io/coresearch.cvurl.io.helper.model=com.fasterxml.jackson.databind
                    </argLine>
                </configuration>
            </plugin>

            <!-- enforcer plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- failsafe plugin -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
            </plugin>

            <!--Coveralls plugin-->
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>${coveralls-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>javax.xml.bind</groupId>
                        <artifactId>jaxb-api</artifactId>
                        <version>${jaxb-api.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- jacoco plugin -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>coresearch/cvurl/io/constant/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <!-- OSSRH deployment-->
    <profiles>
        <profile>
            <id>ossrh</id>
            <build>
                <plugins>
                    <!-- sonatype-nexus plugin -->
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus-staging-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>

                    <!-- source plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${source-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- JavaDoc plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${javadoc-plugin.version}</version>
                        <configuration>
                            <show>public</show>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- gpg plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <developers>
        <developer>
            <id>0</id>
            <name>Andrew Petryk</name>
            <email>andrew.petryk@avenga.com</email>
            <organization>CoreValue powered by Avenga</organization>
            <roles>
                <role>Product Owner/Team Lead</role>
            </roles>
        </developer>
        <developer>
            <id>1</id>
            <name>Mykhailo Voloshchuk</name>
            <email>mykhailo.voloshchuk@avenga.com</email>
            <organization>CoreValue powered by Avenga</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>2</id>
            <name>Ivan Mahlatii</name>
            <email>ivan.mahlatii@avenga.com</email>
            <organization>CoreValue powered by Avenga</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>3</id>
            <name>Yurii Kaplun</name>
            <email>yurii.kaplun@avenga.com</email>
            <organization>CoreValue powered by Avenga</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>4</id>
            <name>Dmytro Tarianyk</name>
            <email>dmytro.tarianyk@avenga.com</email>
            <organization>CoreValue powered by Avenga</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/corese4rch/cvurl/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <distribution>repo</distribution>
            <url>https://github.com/corese4rch/cvurl/blob/master/LICENSE</url>
        </license>
    </licenses>

    <scm>
        <url>http://github.com/corese4rch/cvurl/tree/master</url>
        <connection>scm:git:git://github.com/corese4rch/cvurl.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/corese4rch/cvurl.git</developerConnection>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>